[gd_scene load_steps=9 format=3 uid="uid://cruw6niu5mbrv"]

[ext_resource type="FontFile" uid="uid://cjeifscgm0rd" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="1_atrl1"]
[ext_resource type="Script" path="res://assets/scripts/Menu.gd" id="1_hyrqt"]
[ext_resource type="PackedScene" path="res://assets/scenes/fps_meter.tscn" id="3_ocd0j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_huj0e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_037pe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ebqmy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7taxt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7jna"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_hyrqt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_left = 64.0
offset_top = 80.0
offset_right = 1088.0
offset_bottom = 568.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Title" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 53
text = "Forgotten Memories"

[node name="Quit" type="Button" parent="Control/VBoxContainer/Title"]
layout_mode = 2
offset_left = 5.0
offset_top = 267.0
offset_right = 81.0
offset_bottom = 309.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_huj0e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_037pe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebqmy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7taxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r7jna")
text = "Quit"

[node name="StartGame" type="Button" parent="Control/VBoxContainer/Title"]
layout_mode = 2
offset_left = 4.0
offset_top = 135.0
offset_right = 194.0
offset_bottom = 164.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_huj0e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_037pe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebqmy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7taxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r7jna")
text = "Start Game"

[node name="Settings" type="Button" parent="Control/VBoxContainer/Title"]
layout_mode = 2
offset_left = 2.0
offset_top = 208.0
offset_right = 154.0
offset_bottom = 237.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_atrl1")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_huj0e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_037pe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebqmy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7taxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r7jna")
text = "Settings"

[node name="FPSMeter" parent="." instance=ExtResource("3_ocd0j")]

[connection signal="pressed" from="Control/VBoxContainer/Title/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Title/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Title/StartGame" to="Control/VBoxContainer/Title/StartGame" method="_on_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Title/Settings" to="." method="_on_settings_pressed"]
